--- a/index.html
+++ b/index.html
@@ -28,17 +28,12 @@
       <div class="col-xs-12  col-md-9">
         <div class="article">
           <h2>Correlations Discovered Between Health Risks and Age, Income</h2>
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
-
-          <p>Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum tortor
-            quam, feugiat vitae, ultricies eget, tempor sit amet, ante. Donec eu libero sit amet quam egestas semper. Aenean
-            ultricies mi vitae est. Mauris placerat eleifend leo.</p>
+          <p>The scatter plot displayed shows a strong correlation between absence in available healthcare and populations living
+            in poverty. More reasearch is needed to dive into the specific causation of the abscence of healthcare, but this initial
+            explorataory analysis is certainly a motivator to dive deeper into the data. It is important to note that there are outliers
+            such as Texas and New Hampshire as both do not have lack of healthcare numbers that match their correspond with their percent
+            population in poverty.
+          </p>
         </div>
       </div>
     </div>
